@@ -6,6 +6,7 @@ Revision history for Perl module Dackup:
        the directory (suggested by Alias)
      - when not passed a directory, defaults to using .perl/Dackup
        or Perl/Dackup in home directory (suggested by Alias)
+     - add new throttle option throttle => '1MBps' (only SSH for now)
 
 0.41 Tue Mar 17 14:54:02 GMT 2009
      - remove error when nothing is to be updated
